Playing with touching screen

--- a/touchFreeLibrary/build.gradle
+++ b/touchFreeLibrary/build.gradle
@@ -22,6 +22,6 @@ android {
 }
 
 dependencies {
-    tcompile project(':java')
+    api project(':java')
     implementation project(path: ':openCVLibrary24136')
 }
