--- a/touchFreeLibrary/src/main/AndroidManifest.xml
+++ b/touchFreeLibrary/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:targetSdkVersion="29" />
+    <uses-sdk android:targetSdkVersion="29"
+    android:minSdkVersion="25" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +14,6 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
     </application>
-    
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
 </manifest>
